# tourbox-linux

./: CLAUDE.md  LICENSE.txt  README.md  ble_test_tourbox.py  install.sh  install_config.sh  setup.cfg  uninstall.sh  usb_test_tourbox.py
.github/ISSUE_TEMPLATE/: bug_report.yml  connection_issue.yml  feature_request.yml
docs/: CONFIG_GUIDE.md  DEVELOPMENT.md  GUI_USER_GUIDE.md
docs/technical/: KDOTOOL_INFO.md  TOURBOX_ELITE_PROTOCOL_SOLVED.md
tourboxelite/: __main__.py  config_loader.py  default_mappings.conf  device_base.py  device_ble.py  device_usb.py  haptic.py  profile_io.py
tourboxelite/gui/: __init__.py  config_writer.py  control_editor.py  controls_list.py  driver_manager.py  main_window.py  profile_manager.py  profile_settings_dialog.py  ui_constants.py
tuxbox/: __main__.py  device_base.py  device_usb.py  profile_io.py
tuxbox/gui/: __init__.py  control_editor.py  driver_manager.py  main_window.py  profile_manager.py  update_checker.py
