[metadata]
name = tourboxelite
version = attr: tourboxelite.VERSION
description = Linux driver for TourBox Elite - Bluetooth LE and USB to uinput
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = input, keyboard, bluetooth, ble, wayland, tourbox
license = MIT License
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: System :: Hardware
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    bleak>=0.20.0
    evdev>=1.6.0
    pyserial>=3.5

[options.package_data]
* = *.md, *.conf
tourboxelite.gui = assets/*.svg

[options.entry_points]
console_scripts =
    tourboxelite = tourboxelite.__main__:main
    tourboxelite-ble = tourboxelite.device_ble:main
    tourboxelite-usb = tourboxelite.device_usb:main
    tourboxelite-gui = tourboxelite.gui.main_window:main
